@@ -100,6 +100,26 @@ class ApiQueryRevisions extends ApiQueryBase {
 		if ($pageCount > 1 && $enumRevMode)
 			$this->dieUsage('titles, pageids or a generator was used to supply multiple pages, but the limit, startid, endid, dirNewer, user, excludeuser, start and end parameters may only be used on a single page.', 'multpages');
 
+		if (!is_null($params['diffto'])) {
+			if ($params['diffto'] == 'cur')
+				$params['diffto'] = 0;
+			if ((!ctype_digit($params['diffto']) || $params['diffto'] < 0) 
+					&& $params['diffto'] != 'prev' && $params['diffto'] != 'next')
+				$this->dieUsage('rvdiffto must be set to a non-negative number, "prev", "next" or "cur"', 'diffto');
+			// Check whether the revision exists and is readable,
+			// DifferenceEngine returns a rather ambiguous empty
+			// string if that's not the case
+			if ($params['diffto'] != 0) {
+				$difftoRev = Revision::newFromID($params['diffto']);
+				if (!$difftoRev)
+					$this->dieUsageMsg(array('nosuchrevid', $params['diffto']));
+				if (!$difftoRev->userCan(Revision::DELETED_TEXT)) {
+					$this->setWarning("Couldn't diff to r{$difftoRev->getID()}: content is hidden");
+					$params['diffto'] = null;
+				}
+			}
+		}
+
 		$this->addTables('revision');
 		$this->addFields(Revision::selectFields());
 		$this->addTables('page');
@@ -116,6 +136,7 @@ class ApiQueryRevisions extends ApiQueryBase {
 		$this->fld_size = isset ($prop['size']);
 		$this->fld_user = isset ($prop['user']);
 		$this->token = $params['token'];
+		$this->diffto = $params['diffto'];
 
 		if ( !is_null($this->token) || $pageCount > 0) {
 			$this->addFields( Revision::selectPageFields() );
@@ -288,7 +309,7 @@ class ApiQueryRevisions extends ApiQueryBase {
 	}
 
 	private function extractRowInfo( $revision ) {
-
+		$title = $revision->getTitle();
 		$vals = array ();
 
 		if ($this->fld_ids) {
@@ -325,10 +346,7 @@ class ApiQueryRevisions extends ApiQueryBase {
 				if (strval($comment) !== '')
 					$vals['comment'] = $comment;
 			}
-		}
-
-		if(!is_null($this->token) || ($this->fld_content && $this->expandTemplates))
-			$title = $revision->getTitle();
+		}	
 
 		if(!is_null($this->token))
 		{
@@ -371,6 +389,22 @@ class ApiQueryRevisions extends ApiQueryBase {
 			ApiResult :: setContent($vals, $text);
 		} else if ($this->fld_content) {
 			$vals['texthidden'] = '';
+		}
+
+		if (!is_null($this->diffto)) {
+			global $wgAPIMaxUncachedDiffs;
+			static $n = 0; // Numer of uncached diffs we've had
+			if($n< $wgAPIMaxUncachedDiffs) {
+				$engine = new DifferenceEngine($title, $revision->getID(), $this->diffto);
+				$difftext = $engine->getDiffBody();
+				$vals['diff']['from'] = $engine->getOldid();
+				$vals['diff']['to'] = $engine->getNewid();
+				ApiResult::setContent($vals['diff'], $difftext);
+				if(!$engine->wasCacheHit())
+					$n++;
+			} else {
+				$vals['diff']['notcached'] = '';
+			}
 		}
 		return $vals;
 	}
@@ -429,6 +463,7 @@ class ApiQueryRevisions extends ApiQueryBase {
 				ApiBase :: PARAM_ISMULTI => true
 			),
 			'continue' => null,
+			'diffto' => null,
 		);
 	}
 
@@ -448,6 +483,8 @@ class ApiQueryRevisions extends ApiQueryBase {
 			'section' => 'only retrieve the content of this section',
 			'token' => 'Which tokens to obtain for each revision',
 			'continue' => 'When more results are available, use this to continue',
+			'diffto' => array('Revision ID to diff each revision to.',
+				'Use "prev", "next" and "cur" for the previous, next and current revision respectively.'),
 		);
 	}
 
